# simple-rag

./: .env.dist  .gitignore  README.md
backend/: .env.dist  .env.docker  .gitignore  README.md  pyproject.toml
backend/src/: main.py  worker.py
backend/src/jobs/: activities.py  converter.py  workflows.py
backend/src/routes/: router.py
backend/src/routes/v1/: embeddings.py  query.py  v1router.py
backend/src/services/: documents.py  embeddings.py  files.py  prompts.py  rag.py
backend/src/utils/: config.py  types.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: chat-view.tsx  footer.tsx  header.tsx  sidebar.tsx
